<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2E2E2"
    android:orientation="vertical"
    tools:context="com.openclassrooms.entrevoisins.ui.neighbour_list.ProfileActivity">

    <!-- Avatar Section -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/profile_avatar_section"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/profile_location_icon">

        <ImageView
            android:id="@+id/profile_avatar"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_account"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/profile_back_button"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@android:string/cancel"
            android:scaleX="1.25"
            android:scaleY="1.25"
            android:tint="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/actionModeCloseDrawable"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/profile_title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="192dp"
            android:text="@string/Profile_name_main"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/profile_favorite_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentEnd="false"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#FCFCFC"
            android:contentDescription="@string/fab_transformation_sheet_behavior"
            android:elevation="8dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_avatar"
            app:srcCompat="@drawable/ic_favorite_empty"
            tools:visibility="visible" />

    </android.support.constraint.ConstraintLayout>

    <!-- Details Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:orientation="vertical">

        <!-- Neighbour's Information Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="12dp"
            android:background="#FFFFFF"
            android:elevation="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_neighbour_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/Profile_name_info"
                android:textSize="18sp" />

            <!-- LOCATION -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/profile_location_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="12dp"
                    app:srcCompat="@drawable/ic_baseline_location_on_24"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/profile_location_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:ems="10"
                    android:text="@string/Profile_location" />

            </LinearLayout>

            <!-- PHONE -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/profile_phone_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    app:srcCompat="@drawable/ic_baseline_phone_24" />

                <TextView
                    android:id="@+id/profile_phone_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:ems="10"
                    android:text="@string/Profile_phone_number" />

            </LinearLayout>

            <!-- SOCIAL ACCOUNT -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/profile_account_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    app:srcCompat="@drawable/ic_baseline_language_24" />

                <TextView
                    android:id="@+id/profile_social_account_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/Profile_social_account" />

            </LinearLayout>

        </LinearLayout>

        <!-- About Me Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="#FFFFFF"
            android:elevation="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_about_me_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-black"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:text="@string/Profile_about_me_title"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profile_about_me_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="16dp"
                android:paddingBottom="4dp"
                android:text="@string/Profile_about_me_description"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>